{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 3315,
  "lineage": "1c6313e6-0b21-f5e9-29dd-3bd594464e36",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "station_privatesubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:794637260409:subnet/subnet-0c3d68f8e1ab56373",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "12.0.3.0/26",
            "default_for_az": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "station_privatesubnet1"
                ]
              }
            ],
            "id": "subnet-0c3d68f8e1ab56373",
            "map_public_ip_on_launch": false,
            "owner_id": "794637260409",
            "state": "available",
            "tags": {
              "Application": "STATION",
              "Name": "station_privatesubnet1"
            },
            "vpc_id": "vpc-06d8990a6b4a064f1"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "station_privatesubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:794637260409:subnet/subnet-066df4c947dc82d31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "12.0.4.0/26",
            "default_for_az": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "station_privatesubnet2"
                ]
              }
            ],
            "id": "subnet-066df4c947dc82d31",
            "map_public_ip_on_launch": false,
            "owner_id": "794637260409",
            "state": "available",
            "tags": {
              "Application": "STATION",
              "Name": "station_privatesubnet2"
            },
            "vpc_id": "vpc-06d8990a6b4a064f1"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "station_publicsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:794637260409:subnet/subnet-0230d57f74b4455e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "12.0.1.0/27",
            "default_for_az": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "station_publicsubnet1"
                ]
              }
            ],
            "id": "subnet-0230d57f74b4455e0",
            "map_public_ip_on_launch": false,
            "owner_id": "794637260409",
            "state": "available",
            "tags": {
              "Application": "STATION",
              "Name": "station_publicsubnet1"
            },
            "vpc_id": "vpc-06d8990a6b4a064f1"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "station_publicsubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:794637260409:subnet/subnet-066c6d67b0a8a2387",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "12.0.2.0/27",
            "default_for_az": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "station_publicsubnet2"
                ]
              }
            ],
            "id": "subnet-066c6d67b0a8a2387",
            "map_public_ip_on_launch": false,
            "owner_id": "794637260409",
            "state": "available",
            "tags": {
              "Application": "STATION",
              "Name": "station_publicsubnet2"
            },
            "vpc_id": "vpc-06d8990a6b4a064f1"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "station_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:794637260409:vpc/vpc-06d8990a6b4a064f1",
            "cidr_block": "12.0.0.0/21",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-06a540acd8461c0f6",
                "cidr_block": "12.0.0.0/21",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-1154bf79",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "station_vpc"
                ]
              }
            ],
            "id": "vpc-06d8990a6b4a064f1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ce65c13c72a37aca",
            "owner_id": "794637260409",
            "state": "available",
            "tags": {
              "Application": "STATION",
              "Name": "station_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.station_back",
      "mode": "managed",
      "type": "aws_alb",
      "name": "station_back_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:794637260409:loadbalancer/app/station-back-alb/0cc0fc202d54984c",
            "arn_suffix": "app/station-back-alb/0cc0fc202d54984c",
            "dns_name": "station-back-alb-502379471.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:794637260409:loadbalancer/app/station-back-alb/0cc0fc202d54984c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "station-back-alb",
            "security_groups": [
              "sg-0c9e0e62657a30614"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0230d57f74b4455e0"
              },
              {
                "subnet_id": "subnet-066c6d67b0a8a2387"
              }
            ],
            "subnets": [
              "subnet-0230d57f74b4455e0",
              "subnet-066c6d67b0a8a2387"
            ],
            "tags": {
              "Application": "STATION",
              "Name": "station-back-alb"
            },
            "vpc_id": "vpc-06d8990a6b4a064f1",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "data.aws_subnet.station_publicsubnet1",
            "data.aws_subnet.station_publicsubnet2",
            "data.aws_vpc.station_vpc",
            "module.station_back.aws_security_group.sg_station_back_alb"
          ]
        }
      ]
    },
    {
      "module": "module.station_back",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "station_back_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:794637260409:listener/app/station-back-alb/0cc0fc202d54984c/20dc3dac8a192f77",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:794637260409:targetgroup/station-back-target-group/8bff435e0c7ff70e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:794637260409:listener/app/station-back-alb/0cc0fc202d54984c/20dc3dac8a192f77",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:794637260409:loadbalancer/app/station-back-alb/0cc0fc202d54984c",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "data.aws_subnet.station_publicsubnet1",
            "data.aws_subnet.station_publicsubnet2",
            "data.aws_vpc.station_vpc",
            "module.station_back.aws_alb.station_back_alb",
            "module.station_back.aws_alb_target_group.station_back_target_group",
            "module.station_back.aws_security_group.sg_station_back_alb"
          ]
        }
      ]
    },
    {
      "module": "module.station_back",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "station_back_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:794637260409:targetgroup/station-back-target-group/8bff435e0c7ff70e",
            "arn_suffix": "targetgroup/station-back-target-group/8bff435e0c7ff70e",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/StationDemoSecureWeb/health",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:794637260409:targetgroup/station-back-target-group/8bff435e0c7ff70e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "station-back-target-group",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Application": "STATION",
              "Name": "station-back-alb-target-group"
            },
            "target_type": "ip",
            "vpc_id": "vpc-06d8990a6b4a064f1"
          },
          "dependencies": [
            "data.aws_vpc.station_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.station_back",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_station_back_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:794637260409:security-group/sg-0c9e0e62657a30614",
            "description": "Controle les acces au back REST",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c9e0e62657a30614",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http request",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "station-back-alb",
            "name_prefix": "",
            "owner_id": "794637260409",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "STATION",
              "Name": "station-back-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d8990a6b4a064f1"
          },
          "dependencies": [
            "data.aws_vpc.station_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.station_back",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_station_back_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:794637260409:security-group/sg-0590d025db98d5589",
            "description": "Controle les acces a ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0590d025db98d5589",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c9e0e62657a30614"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "station-back-ecs",
            "name_prefix": "",
            "owner_id": "794637260409",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "STATION",
              "Name": "station-back-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d8990a6b4a064f1"
          },
          "dependencies": [
            "data.aws_vpc.station_vpc",
            "module.station_back.aws_security_group.sg_station_back_alb"
          ]
        }
      ]
    },
    {
      "module": "module.station_db",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "station_db_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:794637260409:targetgroup/station-db-target-group/5578e147e0e40b8f",
            "arn_suffix": "targetgroup/station-db-target-group/5578e147e0e40b8f",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:794637260409:targetgroup/station-db-target-group/5578e147e0e40b8f",
            "lambda_multi_value_headers_enabled": false,
            "name": "station-db-target-group",
            "port": 3306,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "Application": "STATION",
              "Name": "station-db-alb-target-group"
            },
            "target_type": "ip",
            "vpc_id": "vpc-06d8990a6b4a064f1"
          },
          "dependencies": [
            "data.aws_vpc.station_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.station_db",
      "mode": "managed",
      "type": "aws_lb",
      "name": "station_db_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:794637260409:loadbalancer/net/station-db-lb/6d770cb2cb6488c8",
            "arn_suffix": "net/station-db-lb/6d770cb2cb6488c8",
            "dns_name": "station-db-lb-6d770cb2cb6488c8.elb.eu-west-3.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:794637260409:loadbalancer/net/station-db-lb/6d770cb2cb6488c8",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "station-db-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-066df4c947dc82d31"
              },
              {
                "subnet_id": "subnet-0c3d68f8e1ab56373"
              }
            ],
            "subnets": [
              "subnet-066df4c947dc82d31",
              "subnet-0c3d68f8e1ab56373"
            ],
            "tags": {
              "Application": "STATION",
              "Name": "station-db-nlb"
            },
            "vpc_id": "vpc-06d8990a6b4a064f1",
            "zone_id": "Z1CMS0P5QUZ6D5"
          },
          "dependencies": [
            "data.aws_subnet.station_privatesubnet1",
            "data.aws_subnet.station_privatesubnet2"
          ]
        }
      ]
    },
    {
      "module": "module.station_db",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "station_db_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:794637260409:listener/net/station-db-lb/6d770cb2cb6488c8/6300514f12d685f5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:794637260409:targetgroup/station-db-target-group/5578e147e0e40b8f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:794637260409:listener/net/station-db-lb/6d770cb2cb6488c8/6300514f12d685f5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:794637260409:loadbalancer/net/station-db-lb/6d770cb2cb6488c8",
            "port": 3306,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "data.aws_subnet.station_privatesubnet1",
            "data.aws_subnet.station_privatesubnet2",
            "data.aws_vpc.station_vpc",
            "module.station_db.aws_alb_target_group.station_db_target_group",
            "module.station_db.aws_lb.station_db_lb"
          ]
        }
      ]
    },
    {
      "module": "module.station_db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_station_db_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:794637260409:security-group/sg-03a8fd485c7472aa5",
            "description": "Controle les acces a ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a8fd485c7472aa5",
            "ingress": [
              {
                "cidr_blocks": [
                  "12.0.0.0/21"
                ],
                "description": "TCP request",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "station-db-ecs",
            "name_prefix": "",
            "owner_id": "794637260409",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "STATION",
              "Name": "station-db-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d8990a6b4a064f1"
          },
          "dependencies": [
            "data.aws_vpc.station_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.station_front",
      "mode": "managed",
      "type": "aws_alb",
      "name": "station_front_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:794637260409:loadbalancer/app/station-front-alb/ce557159c2c28b88",
            "arn_suffix": "app/station-front-alb/ce557159c2c28b88",
            "dns_name": "station-front-alb-30422086.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:794637260409:loadbalancer/app/station-front-alb/ce557159c2c28b88",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "station-front-alb",
            "security_groups": [
              "sg-06e771735e92151b0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0230d57f74b4455e0"
              },
              {
                "subnet_id": "subnet-066c6d67b0a8a2387"
              }
            ],
            "subnets": [
              "subnet-0230d57f74b4455e0",
              "subnet-066c6d67b0a8a2387"
            ],
            "tags": {
              "Application": "STATION",
              "Name": "station-front-alb"
            },
            "vpc_id": "vpc-06d8990a6b4a064f1",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "data.aws_subnet.station_publicsubnet1",
            "data.aws_subnet.station_publicsubnet2",
            "data.aws_vpc.station_vpc",
            "module.station_front.aws_security_group.sg_station_front_alb"
          ]
        }
      ]
    },
    {
      "module": "module.station_front",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "station_front_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:794637260409:listener/app/station-front-alb/ce557159c2c28b88/dce52eb0b58a9365",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:794637260409:targetgroup/station-front-target-group/6126544dc47a8e7f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:794637260409:listener/app/station-front-alb/ce557159c2c28b88/dce52eb0b58a9365",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:794637260409:loadbalancer/app/station-front-alb/ce557159c2c28b88",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "data.aws_subnet.station_publicsubnet1",
            "data.aws_subnet.station_publicsubnet2",
            "data.aws_vpc.station_vpc",
            "module.station_front.aws_alb.station_front_alb",
            "module.station_front.aws_alb_target_group.station_front_target_group",
            "module.station_front.aws_security_group.sg_station_front_alb"
          ]
        }
      ]
    },
    {
      "module": "module.station_front",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "station_front_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:794637260409:targetgroup/station-front-target-group/6126544dc47a8e7f",
            "arn_suffix": "targetgroup/station-front-target-group/6126544dc47a8e7f",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/station-angular4-poc/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:794637260409:targetgroup/station-front-target-group/6126544dc47a8e7f",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "station-front-target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Application": "STATION",
              "Name": "station-front-alb-target-group"
            },
            "target_type": "ip",
            "vpc_id": "vpc-06d8990a6b4a064f1"
          },
          "dependencies": [
            "data.aws_vpc.station_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.station_front",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_station_front_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:794637260409:security-group/sg-06e771735e92151b0",
            "description": "Controle les acces a ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e771735e92151b0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http request",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "station-front-alb",
            "name_prefix": "",
            "owner_id": "794637260409",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "STATION",
              "Name": "station-front-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d8990a6b4a064f1"
          },
          "dependencies": [
            "data.aws_vpc.station_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.station_front",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_station_front_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:794637260409:security-group/sg-0065aad91c348e1e1",
            "description": "Controle les acces a ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0065aad91c348e1e1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06e771735e92151b0"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "station-front-ecs",
            "name_prefix": "",
            "owner_id": "794637260409",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "STATION",
              "Name": "station-front-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d8990a6b4a064f1"
          },
          "dependencies": [
            "data.aws_vpc.station_vpc",
            "module.station_front.aws_security_group.sg_station_front_alb"
          ]
        }
      ]
    }
  ]
}